the effect is working but the spacing isnt - trying to fix the spacing

--- a/styles.css
+++ b/styles.css
@@ -101,12 +101,13 @@ h3 {
 .blink-speed,
 .cursed-objects {
     width: 100%;
+    height: fit-content;
     color:#99bfdb;
     background: #01081e;
     box-sizing: border-box;
+    display: flex; 
     flex: 1; 
     text-decoration: none;
-    display: flex; 
     justify-content: center; 
     align-items: center; 
 }
@@ -116,8 +117,9 @@ h3 {
 .blink-speed a,
 .cursed-objects a {
     box-sizing: border-box;
+    height: fit-content;
     flex:1;
-    display: block;
+    display: flex;
     width: 100%;
     height:100%;
     text-align: center; /* Center text */
